# all-rounder-be

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2fdf0f17aae5_create_users_table.py  a74d9f3b2c10_create_study_topics_table.py  c52f9dc3daa1_create_daily_tasks_table.py  f0a8f1a2c9b4_create_monthly_task_completions_table.py
app/: main.py
app/core/: config.py  database.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
app/modules/daily_tasks/: constants.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/monthly_tasks/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/study_topics/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
